--- a/nodes/subscribers/klicktipp-subscriber-signoff.html
+++ b/nodes/subscribers/klicktipp-subscriber-signoff.html
@@ -5,8 +5,8 @@
 	       <input type="hidden" id="node-input-apiKeyType">
 	   </div>
 	   <div class="form-row">
-	       <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
-	       <input type="text" id="node-input-email" placeholder="Enter email address">
+	       <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+	       <input type="text" id="node-input-email" placeholder="Enter email address (required)">
 	       <input type="hidden" id="node-input-emailType">
 	   </div>
 	   <div class="form-row">
@@ -16,10 +16,10 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-signoff">
-	<p>Unsubscribes a subscriber using an API key.</p>
+	<p>Unsubscribes a contact via the API key and prevents further communication</p>
 
-   <h3>Inputs</h3>
-   <dl class="message-properties">
+	  <h3>Inputs</h3>
+	  <dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
 	   <dd>
 		   Expected object with the following properties:
@@ -28,10 +28,10 @@
 			   <li><code>email</code> - (Required) (Required) the subscriber's email address</li>
 		   </ul>
 	   </dd>
-   </dl>
+	  </dl>
 
-   <h3>Outputs</h3>
-   <dl class="message-properties">
+	  <h3>Outputs</h3>
+	  <dl class="message-properties">
 	   <dt>msg.payload <span class="property-type">object</span></dt>
 	   <dd>
 		   On success:
@@ -48,13 +48,13 @@
 
 	   <dt>msg.error <span class="property-type">string</span></dt>
 	   <dd>An error message indicating why the request failed.</dd>
-   </dl>
+	  </dl>
 
-   <h3>Node Status</h3>
-   <ul>
+	  <h3>Node Status</h3>
+	  <ul>
 	   <li><strong>Green (dot)</strong> - Unsubscription was successful.</li>
 	   <li><strong>Red (ring)</strong> - Unsubscription failed (e.g., missing API key, email, or API error).</li>
-   </ul>
+	  </ul>
 </script>
 
 <script type="text/javascript">
@@ -65,34 +65,34 @@
 			apiKey: {
 				value: 'payload.apiKey',
 				required: true,
-				validate: RED.validators.typedInput('apiKeyType')
+				validate: RED.validators.typedInput('apiKeyType'),
 			},
 			apiKeyType: {
-				value: 'msg'
+				value: 'msg',
 			},
 			email: {
 				value: 'payload.email',
 				required: true,
-				validate: RED.validators.typedInput('emailType')
+				validate: RED.validators.typedInput('emailType'),
 			},
 			emailType: {
-				value: 'msg'
+				value: 'msg',
 			},
 			name: {
-				value: ''
+				value: '',
 			},
 		},
 		inputs: 1,
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber signoff';
+			return this.name || 'Unsubscribe Contact via API Key';
 		},
-		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Subscriber signoff',
-		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
-			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
+		labelStyle: 'klicktipp_label_style',
+		paletteLabel: 'Unsubscribe Contact via API Key',
+		oneditprepare: function () {
+			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
+			ktInitializeTypedInput('#node-input-apiKey', '#node-input-apiKeyType', 'str', ['str']);
 		},
 	});
 </script>
