--- a/nodes/subscribers/klicktipp-subscriber-untag.html
+++ b/nodes/subscribers/klicktipp-subscriber-untag.html
@@ -4,14 +4,14 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
-	    <input type="text" id="node-input-email" placeholder="Enter email address">
+	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+	    <input type="text" id="node-input-email" placeholder="Enter email address (required)">
 	    <input type="hidden" id="node-input-emailType">
 	</div>
-    <div class="form-row">
-        <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
-        <select id="node-input-tagId"></select>
-    </div>
+	   <div class="form-row">
+	       <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tag</span></label>
+	       <select id="node-input-tagId"></select>
+	   </div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
 	    <input type="text" id="node-input-name" placeholder="Enter node name">
@@ -19,7 +19,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-untag">
-	<p>Removes a manual tag or SmartLink from a subscriber.</p>
+	<p>Removes a tag from a contact</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
@@ -69,7 +69,7 @@
 			email: {
 				value: 'payload.email',
 				required: true,
-				validate: RED.validators.typedInput('emailType')
+				validate: RED.validators.typedInput('emailType'),
 			},
 			emailType: {
 				value: 'msg',
@@ -77,31 +77,37 @@
 			tagId: {
 				value: '',
 				validate: RED.validators.number(),
-				required: true
+				required: true,
 			},
 			name: {
-				value: ''
+				value: '',
 			},
 		},
 		inputs: 1,
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber untag';
+			return this.name || 'Untag Contact';
 		},
-		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Subscriber untag',
-		onadd: function() {
+		labelStyle: 'klicktipp_label_style',
+		paletteLabel: 'Untag Contact',
+		onadd: function () {
 			ktPopulateConfig(this);
 		},
-		oneditprepare: function() {
+		oneditprepare: function () {
 			this.tagDropdown = $('#node-input-tagId');
 			const klicktippInput = $('#node-input-klicktipp');
-			ktBindDropdownToInput(klicktippInput, this.tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+			ktBindDropdownToInput(
+				klicktippInput,
+				this.tagDropdown,
+				this.tagId,
+				this.klicktipp,
+				`/klicktipp/tags/${this.id}`,
+			);
+			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
 		},
-		oneditsave: function() {
+		oneditsave: function () {
 			this.tagId = Number(this.tagDropdown.val()); // Save the selected tagId
-		}
+		},
 	});
 </script>
