--- a/nodes/subscribers/klicktipp-subscriber-delete.html
+++ b/nodes/subscribers/klicktipp-subscriber-delete.html
@@ -4,8 +4,8 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-subscriberId"><i class="fa fa-tags""></i> <span>Subscriber ID</span></label>
-	    <input type="text" id="node-input-subscriberId" placeholder="Enter Subscriber ID (required)">
+	    <label for="node-input-subscriberId"><i class="fa fa-tags""></i> <span>Contact ID</span></label>
+	    <input type="text" id="node-input-subscriberId" placeholder="Enter contact ID (required)">
 	    <input type="hidden" id="node-input-subscriberIdType">
 	</div>
 	<div class="form-row">
@@ -15,7 +15,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-delete">
-	<p>Deletes a subscriber.</p>
+	<p>Deletes a contact</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
@@ -50,7 +50,7 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Subscriber was deleted successfully.</li>
+	    <li><strong>Green (dot)</strong> - Contact was deleted successfully.</li>
 	    <li><strong>Red (ring)</strong> - Failed to delete subscriber (e.g., missing subscriber ID or API error).</li>
 	</ul>
 </script>
@@ -60,15 +60,15 @@
 		category: 'KlickTipp',
 		color: '#DAE1FC',
 		defaults: {
-			prefix: { },
+			prefix: {},
 			klicktipp: { type: 'klicktipp-config', required: true },
 			subscriberId: {
 				required: true,
 				value: 'payload.subscriberId',
-				validate: RED.validators.typedInput('subscriberIdType')
+				validate: RED.validators.typedInput('subscriberIdType'),
 			},
 			subscriberIdType: {
-				value: 'msg'
+				value: 'msg',
 			},
 			name: { value: '' },
 		},
@@ -76,15 +76,17 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber delete';
+			return this.name || 'Delete Contact';
 		},
-		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Subscriber delete',
-		onadd: function() {
+		labelStyle: 'klicktipp_label_style',
+		paletteLabel: 'Delete Contact',
+		onadd: function () {
 			ktPopulateConfig(this);
 		},
-		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
+		oneditprepare: function () {
+			ktInitializeTypedInput('#node-input-subscriberId', '#node-input-subscriberIdType', 'num', [
+				'num',
+			]);
 		},
 	});
 </script>
