--- a/nodes/subscribers/klicktipp-subscriber-search.html
+++ b/nodes/subscribers/klicktipp-subscriber-search.html
@@ -4,8 +4,8 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
-	    <input type="text" id="node-input-email" placeholder="Enter email address">
+	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+	    <input type="text" id="node-input-email" placeholder="Enter email address (required)">
 	    <input type="hidden" id="node-input-emailType">
 	</div>
 	<div class="form-row">
@@ -15,7 +15,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-search">
-	<p>Returns the subscriber ID for an email address. Use the <code>Subscriber get</code> node to retrieve detailed information about this subscriber.</p>
+	<p>Returns the contact ID for an email address</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
@@ -50,7 +50,7 @@
 
 	<h3>Node Status</h3>
 	<ul>
-	    <li><strong>Green (dot)</strong> - Subscriber search was successful, and the subscriber ID was retrieved.</li>
+	    <li><strong>Green (dot)</strong> - Contact search was successful, and the subscriber ID was retrieved.</li>
 	    <li><strong>Red (ring)</strong> - Failed to search for subscriber (e.g., missing email or API error).</li>
 	</ul>
 </script>
@@ -64,10 +64,10 @@
 			email: {
 				value: 'payload.email',
 				required: true,
-				validate: RED.validators.typedInput('emailType')
+				validate: RED.validators.typedInput('emailType'),
 			},
 			emailType: {
-				value: 'msg'
+				value: 'msg',
 			},
 			name: { value: '' },
 		},
@@ -75,15 +75,15 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber search';
+			return this.name || 'Get Contact ID';
 		},
-		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Subscriber search',
-		onadd: function() {
+		labelStyle: 'klicktipp_label_style',
+		paletteLabel: 'Get Contact ID',
+		onadd: function () {
 			ktPopulateConfig(this);
 		},
-		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+		oneditprepare: function () {
+			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
 		},
 	});
 </script>
