--- a/nodes/subscribers/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-unsubscribe.html
@@ -4,8 +4,8 @@
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
 	</div>
 	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email address</span></label>
-	    <input type="text" id="node-input-email" placeholder="Enter email address">
+	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email Address</span></label>
+	    <input type="text" id="node-input-email" placeholder="Enter email address (required)">
 	    <input type="hidden" id="node-input-emailType">
 	</div>
 	<div class="form-row">
@@ -15,7 +15,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscriber-unsubscribe">
-	<p>Unsubscribes a subscriber.</p>
+	<p>Unsubscribes a contact, preventing further communication</p>
 
 	<h3>Inputs</h3>
 	<dl class="message-properties">
@@ -64,28 +64,28 @@
 			email: {
 				value: 'payload.email',
 				required: true,
-				validate: RED.validators.typedInput('emailType')
+				validate: RED.validators.typedInput('emailType'),
 			},
 			emailType: {
-				value: 'msg'
+				value: 'msg',
 			},
 			name: {
-				value: ''
+				value: '',
 			},
 		},
 		inputs: 1,
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber unsubscribe';
+			return this.name || 'Unsubscribe Contact';
 		},
-		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Subscriber unsubscribe',
-		onadd: function() {
+		labelStyle: 'klicktipp_label_style',
+		paletteLabel: 'Unsubscribe Contact',
+		onadd: function () {
 			ktPopulateConfig(this);
 		},
-		oneditprepare: function() {
-			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
+		oneditprepare: function () {
+			ktInitializeTypedInput('#node-input-email', '#node-input-emailType', 'str', ['str']);
 		},
 	});
 </script>
