refactor(add contact node): change name

--- a/nodes/subscribers/klicktipp-subscriber-subscribe.html
+++ b/nodes/subscribers/klicktipp-subscriber-subscribe.html
@@ -132,10 +132,10 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Add or update contact';
+			return this.name || 'Add or Update Contact';
 		},
 		labelStyle: 'klicktipp_label_style',
-		paletteLabel: 'Add or update contact',
+		paletteLabel: 'Add or Update Contact',
 		onadd: function () {
 			ktPopulateConfig(this);
 		},
